@@ -1,3 +1,4 @@
+using LightBDD.Core.ExecutionContext;
 using LightBDD.Core.Results;
 using LightBDD.Framework;
 using LightBDD.XUnit2.Implementation.Customization;
@@ -17,6 +18,7 @@ namespace LightBDD.XUnit2
         /// <param name="reason">Ignore reason.</param>
         public static void IgnoreScenario(this StepExecution execution, string reason)
         {
+            ScenarioExecutionContext.ValidateScenarioScope();
             throw new IgnoreException(reason);
         }
     }
