@@ -1,5 +1,6 @@
-﻿using LightBDD.Core.Execution;
+﻿using System;
 using LightBDD.Framework;
+using LightBDD.UnitTests.Helpers.TestableIntegration;
 using NUnit.Framework;
 
 namespace LightBDD.Core.UnitTests
@@ -8,12 +9,17 @@ namespace LightBDD.Core.UnitTests
     public class StepExecution_tests
     {
         [Test]
-        public void Bypass_should_throw_StepBypassException()
+        public void Bypass_should_fail_when_called_outside_of_step()
         {
-            var bypassReason = "reason";
+            var exception = Assert.Throws<InvalidOperationException>(() => StepExecution.Current.Bypass("reason"));
+            Assert.That(exception!.Message, Does.StartWith("Current task is not executing any scenarios."));
+        }
 
-            var exception = Assert.Throws<StepBypassException>(() => StepExecution.Current.Bypass(bypassReason));
-            Assert.That(exception.Message, Is.EqualTo(bypassReason));
+        [Test]
+        public void IgnoreScenario_should_fail_when_called_outside_of_step()
+        {
+            var exception = Assert.Throws<InvalidOperationException>(() => StepExecution.Current.IgnoreScenario("reason"));
+            Assert.That(exception!.Message, Does.StartWith("Current task is not executing any scenarios."));
         }
     }
 }
